<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_notifications"
            android:title="@string/notif"
            android:icon="@drawable/ic_launcher_foreground"
            android:orderInCategory="100" />

        <item android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_launcher_foreground"
            android:orderInCategory="300" />

        <item android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_launcher_foreground"
            android:orderInCategory="300" />
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
    </group>
</menu>